# function-gemma-agent

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pipeline.yml
app/: main.py
app/api/: dependencies.py  limiter.py  routes.py  schemas.py  security.py
app/core/: __init__.py  config.py  exceptions.py  logger.py
app/domain/: __init__.py  agent.py  models.py
app/domain/interfaces/: __init__.py  llm.py  tools.py
app/inference/: __init__.py  engine.py
app/infrastructure/ml/: __init__.py  (+2 more)
app/observability/: __init__.py  metrics.py
app/prompts/: __init__.py  system.py
app/rag/: __init__.py  retriever.py  store.py  tool.py
app/schemas/: __init__.py  inference.py
app/training/: __init__.py  collector.py
app/utils/: __init__.py  logger.py
data/knowledge_base/: k8s_runbook.md
deployment/: Dockerfile  docker-compose.yml
deployment/k8s/: deployment.yaml  service.yaml
docs/: ARCHITECTURE.md  OPERATIONS.md
docs/runbooks/: OPS-001-ROLLBACK.md  OPS-002-DRIFT-ALERT.md  OPS-003-SCALING.md
docs/tutorials/: TUTORIAL-01-ADD-TOOL.md  TUTORIAL-02-FINE-TUNING.md
k8s/: README.md
k8s/chart/: Chart.yaml  canary-values.yaml  values.yaml
notebooks/: 01_interactive_agent.ipynb  02_latency_analysis.ipynb
scripts/: initialize_kb.py  rollback.ps1  rollback.sh  run_dev.ps1  run_docker.ps1  test_observability.py  test_security.py
tests/: conftest.py
tests/integration/: test_api.py
tests/security/: test_hardening.py
tests/unit/: test_agent.py
tests/validation/: __init__.py  test_rag_react.py
(+13 files in other folders)
