[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "function-gemma-agent"
version = "0.1.0"
description = "A reference implementation of a deterministic agent using FunctionGemma 270M"
authors = [
    {name = "Dani", email = "dani@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "mlflow>=2.10.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "protobuf>=4.25.0",
    "kubernetes>=29.0.0",
    "slowapi>=0.1.9",
    "limits>=3.7.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "black>=24.2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = [
    "tests",
]
python_files = "test_*.py"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []